--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,10 +4,10 @@
         <meta charset = "utf-8">
         <title>Not-my first webpage</title>
     </head>
-        <body>
-                <h1>MY ALX JOURNEY</h1>
-                <p>This is a a brief rundown on my journey as an ALX student</p>
-                <header style = "color:#FF0000(red); height: 70px; width: 100%;"></header>
-                <footer style = "color:#00FF00(green); height: 60px; width: 100%;">Best School</footer>
+        <body style ="margin: 0; border: 0;">
+                <header style = "background-color:#FF0000; height: 70px; width: 100%;"></header>
+                <footer style = "background-color:#00FF00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">
+			<p>Best School</p>
+		</footer>
         </body>
 </html>
