--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,7 +7,7 @@
         <body style ="margin: 0; border: 0;">
                 <header style = "background-color:#FF0000; height: 70px; width: 100%;"></header>
                 <footer style = "background-color:#00FF00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">
-			<p>Best School</p>
+			Best School
 		</footer>
         </body>
 </html>
