--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset = "utf-8">
-        <title>Not-my first webpage</title>
-    </head>
+	<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB clone</title>
+	</head>
         <body style ="margin: 0; border: 0;">
                 <header style = "background-color:#FF0000; height: 70px; width: 100%;"></header>
                 <footer style = "background-color:#00FF00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">
