--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-	</head>
-		<body>
-		</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB clone</title>
+
+    <style>
+        body{
+            padding: 0;
+            margin: 0;
+        }
+
+        header{
+            background-color: #FF0000; height: 70px;width: 100%;
+        }
+
+        footer{
+            background-color: #00FF00;
+            height: 60px; width: 100%;
+            position: absolute;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center
+        }
+    </style>
+</head>
+<body>
+<header>
+</header>
+<footer>
+    Best School
+</footer>
+</body>
 </html>
