--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -28,35 +28,35 @@
     <div class="container">
         <section class="filters">
             <div class="locations">
-              <h3>States</h3>
-              <h4>Addis Ababa,Hawassa...</h4>
+              <h3>ITEMS </h3>
+              <h4>Fridge</h4>
               <ul class="popover">
                 <li>
-                  <h2>Addis Ababa</h2>
+                  <h2>Electronics</h2>
                   <ul>
-                    <li>6 killo</li>
-                    <li>kality</li>
-                    <li>piyassa</li>
+                    <li>Electric kettle</li>
+                    <li>Micro-wave</li>
+                    <li>Flat Iron</li>
                   </ul>
                 </li>
                 <li>
-                  <h2>Hawassa</h2>
+                  <h2>Kitchen ware</h2>
                   <ul>
-                    <li>Atote</li>
-                    <li>shell</li>
-                    <li>Adisu Menahariya</li>
+                    <li>Flask</li>
+                    <li>Towel</li>
+                    <li>Sauce pans</li>
                   </ul>
                 </li>
               </ul>
             </div>
             <div class="amenities">
-              <h3>Amenities</h3>
-              <h4>Internet,Tv,Kitchen...</h4>
+              <h3>More Items</h3>
+              <h4>Coach, Kitchen table, kitchen bar...</h4>
               <ul class="popover">
-                <li>Internet</li>
-                <li>Tv</li>
-                <li>Kitchen</li>
-                <li>Iron</li>
+                <li>Coach</li>
+                <li>Kitchen Table</li>
+                <li>Kitchen bar</li>
+                <li>Gas set</li>
               </ul>
             </div>
             <button>
