--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -23,23 +23,23 @@
     <div class="container">
         <section class="filters">
             <div class="locations">
-                <h3>States</h3>
-                <h4>Addis Ababa,Hawassa...</h4>
+                <h3>Items</h3>
+                <h4>Electronic Items.</h4>
                 <ul class="popover">
                     <li>
-                        <h2>Addis Ababa</h2>
+                        <h2>Electronics</h2>
                         <ul>
-                            <li>6 killo</li>
-                            <li>kality</li>
-                            <li>piyassa</li>
+                            <li>Flat iron</li>
+                            <li>Fridge</li>
+                            <li>Micro-wave</li>
                         </ul>
                     </li>
                     <li>
-                        <h2>Hawassa</h2>
+                        <h2>Kitchen ware</h2>
                         <ul>
-                            <li>Atote</li>
-                            <li>shell</li>
-                            <li>Adisu Menahariya</li>
+                            <li>Kitchen Table</li>
+                            <li>Kitchen Bar</li>
+                            <li>Kitchen cartlary</li>
                         </ul>
                     </li>
                 </ul>
